<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.hsr.gadgeothek.ui.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/gadget" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/versionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:layout_gravity="bottom"
        android:layout_toEndOf="@id/titleTextView"
        android:maxLines="1"
        android:text="@string/version_nr"
        android:textSize="10sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_text_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@id/versionTextView"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/emailAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"
            android:ems="10" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_text_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@id/email_text_input_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp" >

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/password" />

    </android.support.design.widget.TextInputLayout>

    <Switch
        android:id="@+id/keepMeLoggedInSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keep_me_logged_in"
        android:checked="true"
        android:layout_below="@id/password_text_input_layout"
        android:layout_alignStart="@id/password_text_input_layout"
        android:layout_alignEnd="@id/password_text_input_layout" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_below="@id/keepMeLoggedInSwitch"
        android:layout_alignStart="@id/keepMeLoggedInSwitch" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_below="@id/keepMeLoggedInSwitch"
        android:layout_alignEnd="@id/keepMeLoggedInSwitch"/>

    <TextView
        android:id="@+id/changeServerAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_alignStart="@id/loginButton"
        android:text="@string/change_server_url"
        android:layout_marginTop="8dp"/>

</RelativeLayout>
