<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gadget_detail_cardview"
        android:layout_marginBottom="@dimen/cardview_default_radius"
        app:cardElevation="@dimen/cardview_default_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gadget_detail_title"
                tools:text="Name"
                android:textAppearance="@android:style/TextAppearance.Holo.Large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gadget_detail_manufacturer"
                tools:text="vendor"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gadget_detail_condition"
                android:layout_marginTop="8dp"
                tools:text="condition: new"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gadget_detail_price"
                tools:text="Retail Price: 1000"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gadget_detail_reserved"
                tools:text="Reserved at.."
                />


            <Button
                android:id="@+id/gadget_detail_reserve_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="left|center_vertical|center_horizontal"
                android:text="@string/reserve"

                style="@style/Widget.AppCompat.Button.Borderless" />

            <Button
                android:id="@+id/gadget_detail_del_reserve_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:gravity="left|center_vertical|center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/delete_reservation"

                style="@style/Widget.AppCompat.Button.Borderless.Colored" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>