...
    <string name="price">Price</string>
    <string name="delete_reservation">Delete reservation</string>
    <string name="logout">Logout</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="gadgets">Gadgets</string>
    <string name="loans">Loans</string>
    <string name="reservations">Reservations</string>
    <string name="error_invalid_input">please provide a valid input</string>
    <string name="error_empty_input">please provide an input</string>
    <string name="error_login">Wrong username or password. Please check your library url too!</string>
    <string name="error_signup">An error occured during signup. Please try again later.</string>
    <string name="empty_reservations_title">No Reservations</string>
    <string name="empty_reservations_hint">Click on a gadget in the Gadgets Tab to add a reservation</string>
...
    <string name="waiting_position">Waiting Position: %s</string>
    <string name="reservation_ready">This gadget is ready to pickup!</string>
    <string name="change_server_url">Change Server Url</string>
    <string name="server_url">Server Url</string>
    <string name="save">save</string>
    <string name="reservation_failed">Reservation has failed 😭</string>
    <string name="confirm_reservation">Confirm Reservation</string>
    <string name="confirm_reservation_message">Do you want to reserve %s?</string>
    <string name="reservation_successful">Reservation successful!</string>
    <string name="del_reservation_failed">Deletion of reservation has failed 😭</string>
    <string name="confirm_del_reservation">Confirm Deletion</string>
    <string name="confirm_del_reservation_message">Do you want to delete your reservation of %s?</string>
    <string name="del_reservation_successful">Reservation has been successfully deleted!</string>
...
