<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/logoutMenu"
        app:showAsAction="always"
        android:icon="@drawable/log_out"
        android:title="@string/logout">
    </item>
</menu>